--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -199,7 +199,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer b6Pkea8EVhDZ6d351cgvf4a'
+      - 'Bearer 86ZahbcVeE4gPa35fDd6vk1'
     controller: null
     method: null
     route: null
@@ -252,7 +252,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer ZdVc83Df1PEeagvb6k4ah65'
+      - 'Bearer 8Ev6ZhaecfgaV34PD5bdk61'
     controller: null
     method: null
     route: null
@@ -314,7 +314,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 1Vk4a8DP56cfbda6EZ3gvhe'
+      - 'Bearer hP5egfaD3kd6cV8EZbv614a'
     controller: null
     method: null
     route: null
@@ -575,7 +575,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 5V41P6fcEbDda38eZghva6k'
+      - 'Bearer 486hdgEZ3DVfb65aeav1ckP'
     controller: null
     method: null
     route: null
