--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -207,7 +207,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer v1V8eD65P3fZdaa4k6gcbhE'
+      - 'Bearer a4ZVgD3cEe1dva6k5P8f6hb'
     controller: null
     method: null
     route: null
@@ -260,7 +260,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 6cDf8b3dZe6v1EPhka5ag4V'
+      - 'Bearer a38vbk66dfhDcaEeP4ZVg51'
     controller: null
     method: null
     route: null
@@ -322,7 +322,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 5bZ86PafE36aDV4ck1dgveh'
+      - 'Bearer bfgeP6D86dVEh3Zk5vca41a'
     controller: null
     method: null
     route: null
@@ -457,20 +457,22 @@ endpoints:
         status: 201
         content: |
           {
-              "result_cd":"0000",
-              "result_msg":"성공하였습니다.",
-              "mid":"testmid0001",
-              "tid":"testtid0001",
-              "amount":1000,
-              "appr_num":"08132436",
-              "item_name":"메가커피 아메리카노 L",
-              "trx_id":"000000102301023123012301",
-              "acquirer":"비씨",
-              "issuer":"비씨",
-              "card_num":"12340000000005678",    
-              "installment":"00",
-              "method":"수기",
-              "trx_dttm":"2023-04-30 11:11:11"
+              "mid": "wel000707m",
+              "tid": "90387",
+              "amount": 100,
+              "ord_num": "1704385517624H102402",
+              "appr_num": "57480451",
+              "item_name": "메가커피 아메리카노 L",
+              "pg_id": 112,
+              "trx_id": "202311200495962",
+              "acquirer": "IBK",
+              "issuer": "IBK",
+              "card_num": "414003******3964",
+              "installment": "00",
+              "buyer_name": "홍길동",
+              "trx_dttm": "2023-11-20 00:09:39",
+              "method": "수기",
+              "is_cancel": 0
           }
         headers: []
         description: ''
@@ -580,10 +582,18 @@ endpoints:
         type: string
         enumValues: []
         custom: []
+      is_cancel:
+        name: is_cancel
+        description: 취소여부
+        required: false
+        example: null
+        type: integer
+        enumValues: []
+        custom: []
     auth:
       - headers
       - Authorization
-      - 'Bearer 3Evch6P18eZk54DVfab6gda'
+      - 'Bearer dhVkvgacE6e64bf38aD15PZ'
     controller: null
     method: null
     route: null
