--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -130,20 +130,28 @@ endpoints:
                   "is_old_auth":1,
                   "module_type":1,
                   "installment":12,
-                  "pay_year_limit":1,
-                  "pay_month_limit":2,
+                  "pay_year_limit":100,
+                  "pay_month_limit":200,
                   "pay_day_limit":0,
-                  "pay_single_limit":3
+                  "pay_single_limit":300,
+                  "pay_year_amount": 3640000,
+                  "pay_month_amount": 3640000,
+                  "pay_day_amount": 1640000,
+                  "pay_able_amount":-2640000
               },
               {
                   "id":5,
                   "is_old_auth":0,
                   "module_type":1,
                   "installment":12,
-                  "pay_year_limit":1,
-                  "pay_month_limit":2,
+                  "pay_year_limit":100,
+                  "pay_month_limit":200,
                   "pay_day_limit":0,
-                  "pay_single_limit":3
+                  "pay_single_limit":300,
+                  "pay_year_amount": 3640000,
+                  "pay_month_amount": 3640000,
+                  "pay_day_amount": 1640000,
+                  "pay_able_amount":-2640000
               }    
           ]
         headers: []
@@ -233,7 +241,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 6eafcVd5EhaDZ8bvP46k13g'
+      - 'Bearer b8d3f6ZcaED4ekaV6hgv1P5'
     controller: null
     method: null
     route: null
@@ -286,7 +294,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer gbdD8ZV56vPk43ehEac16af'
+      - 'Bearer c468P5efvbg6ZEVDad1akh3'
     controller: null
     method: null
     route: null
@@ -348,7 +356,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer VbdDZefc1ha8a634gEPvk65'
+      - 'Bearer 4vaZE5dcDPkh83fV1g66bea'
     controller: null
     method: null
     route: null
@@ -619,7 +627,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer vfP318e6dagEaVc546hbDkZ'
+      - 'Bearer 6Vc1ev5dkgaDb36Z4hf8PaE'
     controller: null
     method: null
     route: null
